[metadata]
name = runusb
version = 2023.0.0rc1
description = Automagic running of USB sticks
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = "Alistair Lynn"
url = https://github.com/sourcebots/runusb

[options]
python_requires = >=3.8
packages = find:
install_requires =
    logger-extras==0.3.2
    rpi.GPIO==0.7.1

[options.entry_points]
console_scripts =
    runusb = runusb.__main__:main


[flake8]
exclude =
    .eggs,
    .git,
    .pybuild,
    __pycache__,
    build,
    script
ignore =
    # allow attributes which share names with Python builtins
    A003,
    # don't require commas in places that only Python 3.6 requires them (we're
    # on Python 3.5)
    C816
    # W503 and W504 conflict; ignore the one that disagrees with recent PEP8.
    W503

# try to keep it below 80, but this allows us to push it a bit when needed.
max_line_length = 90


[isort]
atomic = true
balanced_wrapping = true

default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER


[mypy]
# global
mypy_path = stubs
warn_incomplete_stub = True
warn_unused_ignores = True
warn_unused_configs = True
warn_redundant_casts = True
strict_optional = True
scripts_are_modules = True

# module
check_untyped_defs = True
warn_return_any = True
